fix breadcrumbs alignment on events page

--- a/src/scss/components/biomes/_events.scss
+++ b/src/scss/components/biomes/_events.scss
@@ -1,4 +1,14 @@
 .page-events {
+	.site-header {
+		img {max-width: 50vw;}
+		margin: 6rem 1.5rem 0;
+		@media (min-width: get-breakpoint(sm)) {
+			margin: 6rem 2.333rem 0;
+		}
+		@media (min-width: get-breakpoint(md)) {
+			margin: 6rem 4rem 0;
+		}
+	}
 	#main {
 		margin: 0 1.5rem;
 		.entry-header {
